--- a/Stock_Info.ipynb
+++ b/Stock_Info.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "6f913302",
+   "execution_count": 1,
+   "id": "6d922baf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-11T11:47:54.017743Z",
-     "start_time": "2021-06-11T11:47:53.340821Z"
-    }
+     "end_time": "2021-06-11T13:35:49.822958Z",
+     "start_time": "2021-06-11T13:35:49.054623Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -224,7 +225,7 @@
        "[2448 rows x 9 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,11 +238,474 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5c4d361d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 2,
+   "id": "a3487f33",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-11T13:35:49.838671Z",
+     "start_time": "2021-06-11T13:35:49.823948Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>회사명</th>\n",
+       "      <th>종목코드</th>\n",
+       "      <th>업종</th>\n",
+       "      <th>주요제품</th>\n",
+       "      <th>상장일</th>\n",
+       "      <th>결산월</th>\n",
+       "      <th>대표자명</th>\n",
+       "      <th>홈페이지</th>\n",
+       "      <th>지역</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>엘비루셈</td>\n",
+       "      <td>376190</td>\n",
+       "      <td>반도체 제조업</td>\n",
+       "      <td>디스플레이 구동 반도체(Driver IC)</td>\n",
+       "      <td>2021-06-11</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>신현창</td>\n",
+       "      <td>http://www.lblusem.com/</td>\n",
+       "      <td>경상북도</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>이성씨엔아이</td>\n",
+       "      <td>379390</td>\n",
+       "      <td>건축기술, 엔지니어링 및 관련 기술 서비스업</td>\n",
+       "      <td>원자력발전소 계측제어 서비스(경상정비)</td>\n",
+       "      <td>2021-06-04</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>박기선</td>\n",
+       "      <td>http://www.iscni.co.kr/</td>\n",
+       "      <td>부산광역시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>에이디엠코리아</td>\n",
+       "      <td>187660</td>\n",
+       "      <td>자연과학 및 공학 연구개발업</td>\n",
+       "      <td>임상 CRO 서비스</td>\n",
+       "      <td>2021-06-03</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>강준모</td>\n",
+       "      <td>http://www.admkorea.co.kr</td>\n",
+       "      <td>서울특별시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>에코프로에이치엔</td>\n",
+       "      <td>383310</td>\n",
+       "      <td>기타 화학제품 제조업</td>\n",
+       "      <td>환경오염 방지 관련 소재 및 설비</td>\n",
+       "      <td>2021-05-28</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>윤성진</td>\n",
+       "      <td>http://www.ecoprohn.co.kr</td>\n",
+       "      <td>충청북도</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LX홀딩스</td>\n",
+       "      <td>383800</td>\n",
+       "      <td>기타 금융업</td>\n",
+       "      <td>지주회사</td>\n",
+       "      <td>2021-05-27</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>구본준, 송치호</td>\n",
+       "      <td>http://www.lxholdings.co.kr</td>\n",
+       "      <td>서울특별시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2443</th>\n",
+       "      <td>CJ대한통운</td>\n",
+       "      <td>000120</td>\n",
+       "      <td>도로 화물 운송업</td>\n",
+       "      <td>Contract Logistics, 포워딩, 항만하역, 해운, 택배국제특송, SCM...</td>\n",
+       "      <td>1956-07-02</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>강신호</td>\n",
+       "      <td>http://www.cjlogistics.com</td>\n",
+       "      <td>서울특별시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2444</th>\n",
+       "      <td>메리츠화재</td>\n",
+       "      <td>000060</td>\n",
+       "      <td>보험업</td>\n",
+       "      <td>손해보험(화재,해상,운송보험)</td>\n",
+       "      <td>1956-07-02</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>김용범</td>\n",
+       "      <td>http://www.meritzfire.com</td>\n",
+       "      <td>서울특별시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2445</th>\n",
+       "      <td>경방</td>\n",
+       "      <td>000050</td>\n",
+       "      <td>종합 소매업</td>\n",
+       "      <td>섬유류(면사,면혼방사,면직물,면혼방직물,화섬사,화섬직물) 제조,도매,수출입</td>\n",
+       "      <td>1956-03-03</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>김준, 김담</td>\n",
+       "      <td>http://www.kyungbang.co.kr</td>\n",
+       "      <td>서울특별시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2446</th>\n",
+       "      <td>유수홀딩스</td>\n",
+       "      <td>000700</td>\n",
+       "      <td>회사 본부 및 경영 컨설팅 서비스업</td>\n",
+       "      <td>지주사업</td>\n",
+       "      <td>1956-03-03</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>송영규</td>\n",
+       "      <td>http://www.eusu-holdings.com</td>\n",
+       "      <td>서울특별시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2447</th>\n",
+       "      <td>한진중공업홀딩스</td>\n",
+       "      <td>003480</td>\n",
+       "      <td>연료용 가스 제조 및 배관공급업</td>\n",
+       "      <td>지주회사</td>\n",
+       "      <td>1956-03-03</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>조남호, 조원국</td>\n",
+       "      <td>http://www.hhic-holdings.com</td>\n",
+       "      <td>경기도</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2448 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           회사명    종목코드                        업종  \\\n",
+       "0         엘비루셈  376190                   반도체 제조업   \n",
+       "1       이성씨엔아이  379390  건축기술, 엔지니어링 및 관련 기술 서비스업   \n",
+       "2      에이디엠코리아  187660           자연과학 및 공학 연구개발업   \n",
+       "3     에코프로에이치엔  383310               기타 화학제품 제조업   \n",
+       "4        LX홀딩스  383800                    기타 금융업   \n",
+       "...        ...     ...                       ...   \n",
+       "2443    CJ대한통운  000120                 도로 화물 운송업   \n",
+       "2444     메리츠화재  000060                       보험업   \n",
+       "2445        경방  000050                    종합 소매업   \n",
+       "2446     유수홀딩스  000700       회사 본부 및 경영 컨설팅 서비스업   \n",
+       "2447  한진중공업홀딩스  003480         연료용 가스 제조 및 배관공급업   \n",
+       "\n",
+       "                                                   주요제품         상장일  결산월  \\\n",
+       "0                               디스플레이 구동 반도체(Driver IC)  2021-06-11  12월   \n",
+       "1                                 원자력발전소 계측제어 서비스(경상정비)  2021-06-04  12월   \n",
+       "2                                            임상 CRO 서비스  2021-06-03  12월   \n",
+       "3                                    환경오염 방지 관련 소재 및 설비  2021-05-28  12월   \n",
+       "4                                                  지주회사  2021-05-27  12월   \n",
+       "...                                                 ...         ...  ...   \n",
+       "2443  Contract Logistics, 포워딩, 항만하역, 해운, 택배국제특송, SCM...  1956-07-02  12월   \n",
+       "2444                                   손해보험(화재,해상,운송보험)  1956-07-02  12월   \n",
+       "2445          섬유류(면사,면혼방사,면직물,면혼방직물,화섬사,화섬직물) 제조,도매,수출입  1956-03-03  12월   \n",
+       "2446                                               지주사업  1956-03-03  12월   \n",
+       "2447                                               지주회사  1956-03-03  12월   \n",
+       "\n",
+       "          대표자명                          홈페이지     지역  \n",
+       "0          신현창       http://www.lblusem.com/   경상북도  \n",
+       "1          박기선       http://www.iscni.co.kr/  부산광역시  \n",
+       "2          강준모     http://www.admkorea.co.kr  서울특별시  \n",
+       "3          윤성진     http://www.ecoprohn.co.kr   충청북도  \n",
+       "4     구본준, 송치호   http://www.lxholdings.co.kr  서울특별시  \n",
+       "...        ...                           ...    ...  \n",
+       "2443       강신호    http://www.cjlogistics.com  서울특별시  \n",
+       "2444       김용범     http://www.meritzfire.com  서울특별시  \n",
+       "2445    김준, 김담    http://www.kyungbang.co.kr  서울특별시  \n",
+       "2446       송영규  http://www.eusu-holdings.com  서울특별시  \n",
+       "2447  조남호, 조원국  http://www.hhic-holdings.com    경기도  \n",
+       "\n",
+       "[2448 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "krx_list[0].종목코드 = krx_list[0].종목코드.map('{:06d}'.format)\n",
+    "krx_list[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "efd3c953",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-06-11T13:35:50.821739Z",
+     "start_time": "2021-06-11T13:35:49.839668Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>회사명</th>\n",
+       "      <th>종목코드</th>\n",
+       "      <th>업종</th>\n",
+       "      <th>주요제품</th>\n",
+       "      <th>상장일</th>\n",
+       "      <th>결산월</th>\n",
+       "      <th>대표자명</th>\n",
+       "      <th>홈페이지</th>\n",
+       "      <th>지역</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>DRB동일</td>\n",
+       "      <td>004840</td>\n",
+       "      <td>고무제품 제조업</td>\n",
+       "      <td>고무벨트(V벨트,콘베이어벨트,평벨트),프라스틱제품 제조,판매</td>\n",
+       "      <td>1976-05-21</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>류영식</td>\n",
+       "      <td>http://drbworld.com</td>\n",
+       "      <td>부산광역시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>DSR</td>\n",
+       "      <td>155660</td>\n",
+       "      <td>1차 비철금속 제조업</td>\n",
+       "      <td>합섬섬유로프</td>\n",
+       "      <td>2013-05-15</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>홍석빈</td>\n",
+       "      <td>http://www.dsr.com</td>\n",
+       "      <td>부산광역시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GS글로벌</td>\n",
+       "      <td>001250</td>\n",
+       "      <td>상품 종합 도매업</td>\n",
+       "      <td>수출입업(시멘트,철강금속,전기전자,섬유,기계화학),상품중개,광업,채석업/하수처리 서...</td>\n",
+       "      <td>1976-06-26</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>김태형</td>\n",
+       "      <td>http://www.gsgcorp.com</td>\n",
+       "      <td>서울특별시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>HDC현대산업개발</td>\n",
+       "      <td>294870</td>\n",
+       "      <td>건물 건설업</td>\n",
+       "      <td>외주주택, 자체공사, 일반건축, 토목 등</td>\n",
+       "      <td>2018-06-12</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>권순호, 정경구</td>\n",
+       "      <td>http://www.hdc-dvp.com</td>\n",
+       "      <td>서울특별시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>KEC</td>\n",
+       "      <td>092220</td>\n",
+       "      <td>반도체 제조업</td>\n",
+       "      <td>반도체 제조</td>\n",
+       "      <td>2006-10-16</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>박남규 김학남</td>\n",
+       "      <td>http://www.kec.co.kr</td>\n",
+       "      <td>서울특별시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2443</th>\n",
+       "      <td>코셋</td>\n",
+       "      <td>189350</td>\n",
+       "      <td>통신 및 방송 장비 제조업</td>\n",
+       "      <td>광통신용 증폭기</td>\n",
+       "      <td>2013-12-24</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>오치형, 주관종</td>\n",
+       "      <td>http://coset.com</td>\n",
+       "      <td>광주광역시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2444</th>\n",
+       "      <td>툴젠</td>\n",
+       "      <td>199800</td>\n",
+       "      <td>자연과학 및 공학 연구개발업</td>\n",
+       "      <td>유전자가위 (유전체 교정 도구) 및 이를 이용한 유전자세포치료제, 고부가가치 가축,...</td>\n",
+       "      <td>2014-06-25</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>김영호, 이병화(각자 대표이사)</td>\n",
+       "      <td>http://www.toolgen.com</td>\n",
+       "      <td>서울특별시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2445</th>\n",
+       "      <td>플럼라인생명과학</td>\n",
+       "      <td>222670</td>\n",
+       "      <td>자연과학 및 공학 연구개발업</td>\n",
+       "      <td>강아지암치료제,돼지DNA테라피</td>\n",
+       "      <td>2015-07-28</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>김앤토니경태</td>\n",
+       "      <td>http://www.plsdna.com</td>\n",
+       "      <td>서울특별시</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2446</th>\n",
+       "      <td>한국미라클피플사</td>\n",
+       "      <td>331660</td>\n",
+       "      <td>기타 화학제품 제조업</td>\n",
+       "      <td>은나노스텝, 닥터오렌지 등</td>\n",
+       "      <td>2019-10-28</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>이호경</td>\n",
+       "      <td>http://www.kmpc.co.kr</td>\n",
+       "      <td>경기도</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2447</th>\n",
+       "      <td>휴벡셀</td>\n",
+       "      <td>212310</td>\n",
+       "      <td>의료용 기기 제조업</td>\n",
+       "      <td>척추용 임플란트 등</td>\n",
+       "      <td>2016-07-26</td>\n",
+       "      <td>12월</td>\n",
+       "      <td>박정민, 허성규(각자대표)</td>\n",
+       "      <td>http://huvexel.com</td>\n",
+       "      <td>경기도</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2448 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            회사명    종목코드               업종  \\\n",
+       "0         DRB동일  004840         고무제품 제조업   \n",
+       "1           DSR  155660      1차 비철금속 제조업   \n",
+       "2         GS글로벌  001250        상품 종합 도매업   \n",
+       "3     HDC현대산업개발  294870           건물 건설업   \n",
+       "4           KEC  092220          반도체 제조업   \n",
+       "...         ...     ...              ...   \n",
+       "2443         코셋  189350   통신 및 방송 장비 제조업   \n",
+       "2444         툴젠  199800  자연과학 및 공학 연구개발업   \n",
+       "2445   플럼라인생명과학  222670  자연과학 및 공학 연구개발업   \n",
+       "2446   한국미라클피플사  331660      기타 화학제품 제조업   \n",
+       "2447        휴벡셀  212310       의료용 기기 제조업   \n",
+       "\n",
+       "                                                   주요제품         상장일  결산월  \\\n",
+       "0                     고무벨트(V벨트,콘베이어벨트,평벨트),프라스틱제품 제조,판매  1976-05-21  12월   \n",
+       "1                                                합섬섬유로프  2013-05-15  12월   \n",
+       "2     수출입업(시멘트,철강금속,전기전자,섬유,기계화학),상품중개,광업,채석업/하수처리 서...  1976-06-26  12월   \n",
+       "3                                외주주택, 자체공사, 일반건축, 토목 등  2018-06-12  12월   \n",
+       "4                                                반도체 제조  2006-10-16  12월   \n",
+       "...                                                 ...         ...  ...   \n",
+       "2443                                           광통신용 증폭기  2013-12-24  12월   \n",
+       "2444  유전자가위 (유전체 교정 도구) 및 이를 이용한 유전자세포치료제, 고부가가치 가축,...  2014-06-25  12월   \n",
+       "2445                                   강아지암치료제,돼지DNA테라피  2015-07-28  12월   \n",
+       "2446                                     은나노스텝, 닥터오렌지 등  2019-10-28  12월   \n",
+       "2447                                         척추용 임플란트 등  2016-07-26  12월   \n",
+       "\n",
+       "                   대표자명                    홈페이지     지역  \n",
+       "0                   류영식     http://drbworld.com  부산광역시  \n",
+       "1                   홍석빈      http://www.dsr.com  부산광역시  \n",
+       "2                   김태형  http://www.gsgcorp.com  서울특별시  \n",
+       "3              권순호, 정경구  http://www.hdc-dvp.com  서울특별시  \n",
+       "4               박남규 김학남    http://www.kec.co.kr  서울특별시  \n",
+       "...                 ...                     ...    ...  \n",
+       "2443           오치형, 주관종        http://coset.com  광주광역시  \n",
+       "2444  김영호, 이병화(각자 대표이사)  http://www.toolgen.com  서울특별시  \n",
+       "2445             김앤토니경태   http://www.plsdna.com  서울특별시  \n",
+       "2446                이호경   http://www.kmpc.co.kr    경기도  \n",
+       "2447     박정민, 허성규(각자대표)      http://huvexel.com    경기도  \n",
+       "\n",
+       "[2448 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_html('https://kind.krx.co.kr/corpgeneral/corpList.do?method=download&searchType=13')[0]\n",
+    "df['종목코드'] = df['종목코드'].map('{:06d}'.format)\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
