--- a/DBUpdater.ipynb
+++ b/DBUpdater.ipynb
@@ -6,8 +6,8 @@
    "id": "28db1db4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-12T13:11:10.089193Z",
-     "start_time": "2021-06-12T13:11:09.562712Z"
+     "end_time": "2021-06-13T04:13:10.386508Z",
+     "start_time": "2021-06-13T04:13:09.765872Z"
     }
    },
    "outputs": [],
@@ -25,11 +25,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7112b963",
+   "id": "ce17fdce",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-12T13:11:10.105148Z",
-     "start_time": "2021-06-12T13:11:10.090188Z"
+     "end_time": "2021-06-13T04:13:10.401983Z",
+     "start_time": "2021-06-13T04:13:10.387535Z"
     }
    },
    "outputs": [],
@@ -109,11 +109,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1564f96d",
+   "id": "43e3efe4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-12T13:11:10.275583Z",
-     "start_time": "2021-06-12T13:11:10.106145Z"
+     "end_time": "2021-06-13T04:13:10.543366Z",
+     "start_time": "2021-06-13T04:13:10.402970Z"
     },
     "scrolled": true
    },
@@ -126,11 +126,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8cc9cf92",
+   "id": "f1c5aeb3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-12T13:11:10.366487Z",
-     "start_time": "2021-06-12T13:11:10.276581Z"
+     "end_time": "2021-06-13T04:13:10.636085Z",
+     "start_time": "2021-06-13T04:13:10.544360Z"
     }
    },
    "outputs": [],
@@ -145,11 +145,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "80567552",
+   "id": "535950fd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-12T13:11:10.381448Z",
-     "start_time": "2021-06-12T13:11:10.367514Z"
+     "end_time": "2021-06-13T04:13:10.651907Z",
+     "start_time": "2021-06-13T04:13:10.637078Z"
     },
     "scrolled": true
    },
@@ -175,11 +175,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "64de9180",
+   "id": "6f153aa0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-12T13:11:10.397428Z",
-     "start_time": "2021-06-12T13:11:10.382445Z"
+     "end_time": "2021-06-13T04:13:10.667915Z",
+     "start_time": "2021-06-13T04:13:10.652904Z"
     }
    },
    "outputs": [
@@ -199,11 +199,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cf7c4a21",
+   "id": "65cea8ea",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-12T13:11:10.412365Z",
-     "start_time": "2021-06-12T13:11:10.398402Z"
+     "end_time": "2021-06-13T04:13:10.683765Z",
+     "start_time": "2021-06-13T04:13:10.669799Z"
     }
    },
    "outputs": [
@@ -226,34 +226,181 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "42a9139b",
+   "id": "7bbfe008",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-12T13:11:58.913579Z",
-     "start_time": "2021-06-12T13:11:10.413362Z"
+     "end_time": "2021-06-13T04:13:57.576621Z",
+     "start_time": "2021-06-13T04:13:10.684759Z"
     },
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            날짜        종가      전일비        시가        고가        저가        거래량\n",
-      "1   2021.06.11  128000.0   5000.0  124500.0  128500.0  124000.0  4535613.0\n",
-      "2   2021.06.10  123000.0    500.0  122500.0  124000.0  120500.0  4533076.0\n",
-      "3   2021.06.09  122500.0   5000.0  125500.0  126000.0  122500.0  6087592.0\n",
-      "4   2021.06.08  127500.0   1000.0  127000.0  127500.0  125000.0  4194955.0\n",
-      "5   2021.06.07  128500.0      0.0  129500.0  130000.0  128000.0  2562918.0\n",
-      "..         ...       ...      ...       ...       ...       ...        ...\n",
-      "11  1997.01.06   20000.0      0.0   20000.0   20000.0   20000.0   436190.0\n",
-      "12  1997.01.04   20000.0      0.0   20000.0   20000.0   20000.0   277690.0\n",
-      "13  1997.01.03   20000.0   3000.0   20000.0   20100.0   20000.0   145680.0\n",
-      "1   1996.12.27   23000.0      0.0   23000.0   23000.0   23000.0        0.0\n",
-      "2   1996.12.26   23000.0  23000.0   23000.0   23000.0   23000.0        0.0\n",
-      "\n",
-      "[6122 rows x 7 columns]\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>날짜</th>\n",
+       "      <th>종가</th>\n",
+       "      <th>전일비</th>\n",
+       "      <th>시가</th>\n",
+       "      <th>고가</th>\n",
+       "      <th>저가</th>\n",
+       "      <th>거래량</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021.06.11</td>\n",
+       "      <td>128000.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>124500.0</td>\n",
+       "      <td>128500.0</td>\n",
+       "      <td>124000.0</td>\n",
+       "      <td>4535613.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2021.06.10</td>\n",
+       "      <td>123000.0</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td>122500.0</td>\n",
+       "      <td>124000.0</td>\n",
+       "      <td>120500.0</td>\n",
+       "      <td>4533076.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2021.06.09</td>\n",
+       "      <td>122500.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>125500.0</td>\n",
+       "      <td>126000.0</td>\n",
+       "      <td>122500.0</td>\n",
+       "      <td>6087592.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2021.06.08</td>\n",
+       "      <td>127500.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>127000.0</td>\n",
+       "      <td>127500.0</td>\n",
+       "      <td>125000.0</td>\n",
+       "      <td>4194955.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2021.06.07</td>\n",
+       "      <td>128500.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>129500.0</td>\n",
+       "      <td>130000.0</td>\n",
+       "      <td>128000.0</td>\n",
+       "      <td>2562918.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1997.01.06</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>436190.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1997.01.04</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>277690.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1997.01.03</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>3000.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>20100.0</td>\n",
+       "      <td>20000.0</td>\n",
+       "      <td>145680.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1996.12.27</td>\n",
+       "      <td>23000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>23000.0</td>\n",
+       "      <td>23000.0</td>\n",
+       "      <td>23000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1996.12.26</td>\n",
+       "      <td>23000.0</td>\n",
+       "      <td>23000.0</td>\n",
+       "      <td>23000.0</td>\n",
+       "      <td>23000.0</td>\n",
+       "      <td>23000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6122 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            날짜        종가      전일비        시가        고가        저가        거래량\n",
+       "1   2021.06.11  128000.0   5000.0  124500.0  128500.0  124000.0  4535613.0\n",
+       "2   2021.06.10  123000.0    500.0  122500.0  124000.0  120500.0  4533076.0\n",
+       "3   2021.06.09  122500.0   5000.0  125500.0  126000.0  122500.0  6087592.0\n",
+       "4   2021.06.08  127500.0   1000.0  127000.0  127500.0  125000.0  4194955.0\n",
+       "5   2021.06.07  128500.0      0.0  129500.0  130000.0  128000.0  2562918.0\n",
+       "..         ...       ...      ...       ...       ...       ...        ...\n",
+       "11  1997.01.06   20000.0      0.0   20000.0   20000.0   20000.0   436190.0\n",
+       "12  1997.01.04   20000.0      0.0   20000.0   20000.0   20000.0   277690.0\n",
+       "13  1997.01.03   20000.0   3000.0   20000.0   20100.0   20000.0   145680.0\n",
+       "1   1996.12.27   23000.0      0.0   23000.0   23000.0   23000.0        0.0\n",
+       "2   1996.12.26   23000.0  23000.0   23000.0   23000.0   23000.0        0.0\n",
+       "\n",
+       "[6122 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -266,17 +413,17 @@
     "                    headers={'User-agent': 'Mozilla/5.0'}).text)[0])    \n",
     "    \n",
     "df = df.dropna()\n",
-    "print(df)"
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "40643c16",
+   "id": "88f9c715",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-12T13:14:56.986273Z",
-     "start_time": "2021-06-12T13:14:56.761251Z"
+     "end_time": "2021-06-13T04:13:57.811726Z",
+     "start_time": "2021-06-13T04:13:57.577485Z"
     }
    },
    "outputs": [],
@@ -291,11 +438,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2dca81cd",
+   "id": "a21e7cd8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-12T13:15:07.764219Z",
-     "start_time": "2021-06-12T13:15:07.749260Z"
+     "end_time": "2021-06-13T04:13:57.827527Z",
+     "start_time": "2021-06-13T04:13:57.812710Z"
     }
    },
    "outputs": [
@@ -320,11 +467,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b085ac86",
+   "id": "fb7737b6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-12T13:15:26.949115Z",
-     "start_time": "2021-06-12T13:15:26.944409Z"
+     "end_time": "2021-06-13T04:13:57.842925Z",
+     "start_time": "2021-06-13T04:13:57.828401Z"
     }
    },
    "outputs": [
@@ -343,12 +490,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "7891d062",
+   "execution_count": 12,
+   "id": "745f8134",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-12T14:04:11.332439Z",
-     "start_time": "2021-06-12T14:04:11.325297Z"
+     "end_time": "2021-06-13T04:13:57.858882Z",
+     "start_time": "2021-06-13T04:13:57.843922Z"
     }
    },
    "outputs": [
@@ -358,7 +505,7 @@
        "'204'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,12 +517,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "dce8d984",
+   "execution_count": 13,
+   "id": "1575268e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-12T14:19:03.382139Z",
-     "start_time": "2021-06-12T14:18:16.147312Z"
+     "end_time": "2021-06-13T04:14:47.982438Z",
+     "start_time": "2021-06-13T04:13:57.859880Z"
     }
    },
    "outputs": [],
@@ -393,12 +540,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b0402618",
+   "execution_count": 14,
+   "id": "28362113",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-06-12T14:02:32.241497Z",
-     "start_time": "2021-06-12T14:02:32.218239Z"
+     "end_time": "2021-06-13T04:14:48.013664Z",
+     "start_time": "2021-06-13T04:14:47.983430Z"
     }
    },
    "outputs": [
@@ -497,7 +644,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1226 rows × 3 columns</p>\n",
+       "<p>408 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -527,10 +674,10 @@
        "0    거래량  4,535,613  4,535,613  \n",
        "1   거래대금  574,198  574,198  백만  \n",
        "\n",
-       "[1226 rows x 3 columns]"
+       "[408 rows x 3 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad79b215",
+   "id": "94961e1a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -550,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b50d0af1",
+   "id": "014ee615",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -558,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "039245e3",
+   "id": "ae4996a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -566,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d8ef13f",
+   "id": "3b68f2f1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -574,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff413635",
+   "id": "e9677b7c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -582,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce8e25a8",
+   "id": "f57df904",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -590,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "950b0f64",
+   "id": "bea19c8a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -598,7 +745,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c9c5599",
+   "id": "0887579f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -606,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aeb3330f",
+   "id": "02826562",
    "metadata": {},
    "outputs": [],
    "source": []
